--- a/ItEasy/auth/LoginView.xib
+++ b/ItEasy/auth/LoginView.xib
@@ -8,8 +8,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegisterViewController" customModule="ItEasy" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
             <connections>
+                <outlet property="loginButton" destination="1nH-kD-om9" id="MqU-Ef-5Gh"/>
                 <outlet property="slideIdicator" destination="h5u-lC-Vtp" id="dp4-sa-hOB"/>
                 <outlet property="view" destination="iN0-l3-epB" id="opn-YC-DFv"/>
             </connections>
@@ -27,7 +28,7 @@
                         <constraint firstAttribute="width" constant="60" id="Muk-rJ-goN"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNC-gS-AfA">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNC-gS-AfA">
                     <rect key="frame" x="45" y="89" width="324" height="45"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="SZE-F9-RqL"/>
@@ -48,56 +49,20 @@
                     <color key="textColor" white="0.72999999999999998" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CWV-W6-WSY">
-                    <rect key="frame" x="45" y="315" width="324" height="23"/>
-                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="20"/>
-                    <color key="textColor" white="0.72999999999999998" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textField opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="anung@jagatara.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QJS-Xc-ats">
-                    <rect key="frame" x="45" y="358" width="324" height="45"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="45" id="OnY-ea-LLa"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="go" enablesReturnKeyAutomatically="YES" textContentType="email"/>
-                </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="825-kE-A94">
-                    <rect key="frame" x="45" y="423" width="324" height="23"/>
-                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="20"/>
-                    <color key="textColor" white="0.72999999999999998" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="********" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="CSd-SI-1gk">
-                    <rect key="frame" x="45" y="466" width="324" height="45"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="45" id="uVF-Uv-TAv"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" returnKeyType="go" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
-                </textField>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Anung Jagatara" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sd4-Ai-aOU">
-                    <rect key="frame" x="45" y="250" width="324" height="45"/>
-                    <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="PWh-05-aqc"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="go" enablesReturnKeyAutomatically="YES" textContentType="name"/>
-                </textField>
-                <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" role="primary" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jKO-WZ-3q0" customClass="ActualGradientButton" customModule="ItEasy" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" role="primary" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1nH-kD-om9" customClass="ActualGradientButton" customModule="ItEasy" customModuleProvider="target">
                     <rect key="frame" x="45" y="595" width="324" height="60"/>
                     <color key="backgroundColor" systemColor="systemGreenColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="eg7-5o-6Fh"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="PU8-bh-Zmf"/>
                     </constraints>
                     <color key="tintColor" systemColor="systemGreenColor"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title="Button">
                         <attributedString key="attributedTitle">
-                            <fragment content="Register">
+                            <fragment content="Login">
                                 <attributes>
                                     <font key="NSFont" size="20" name="Helvetica"/>
-                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                 </attributes>
                             </fragment>
                         </attributedString>
@@ -114,41 +79,54 @@
                             <color key="value" red="0.46274507050000002" green="0.59607845540000004" blue="0.4941176176" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="register:" destination="-1" eventType="touchUpInside" id="PWR-nv-5bj"/>
-                    </connections>
                 </button>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Anung Jagatara" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="Sd4-Ai-aOU">
+                    <rect key="frame" x="45" y="250" width="324" height="45"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="JPc-qC-6ej"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="name"/>
+                </textField>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="825-kE-A94">
+                    <rect key="frame" x="45" y="315" width="324" height="23"/>
+                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="20"/>
+                    <color key="textColor" white="0.72999999999999998" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textField opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="********" clearsOnBeginEditing="YES" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="CSd-SI-1gk">
+                    <rect key="frame" x="45" y="358" width="324" height="45"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="fFW-04-X7v"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" secureTextEntry="YES" textContentType="password"/>
+                </textField>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="825-kE-A94" firstAttribute="top" secondItem="QJS-Xc-ats" secondAttribute="bottom" constant="20" id="4Vj-0W-POI"/>
                 <constraint firstItem="yyx-QW-Zad" firstAttribute="top" secondItem="NNC-gS-AfA" secondAttribute="bottom" constant="5" id="6Xk-VB-7BE"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="CSd-SI-1gk" secondAttribute="trailing" constant="45" id="9Ao-KF-ram"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="1nH-kD-om9" secondAttribute="trailing" constant="45" id="E1z-K4-DS1"/>
                 <constraint firstItem="jzC-dO-uzR" firstAttribute="top" secondItem="yyx-QW-Zad" secondAttribute="bottom" constant="45" id="EB5-oa-k3w"/>
                 <constraint firstItem="yyx-QW-Zad" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="ElS-gn-J7D"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="CWV-W6-WSY" secondAttribute="trailing" constant="45" id="FzN-cm-xIE"/>
                 <constraint firstItem="h5u-lC-Vtp" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="H57-f0-spf"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jzC-dO-uzR" secondAttribute="trailing" constant="45" id="IKc-CQ-D6W"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NNC-gS-AfA" secondAttribute="trailing" constant="45" id="JAU-oj-2cJ"/>
-                <constraint firstItem="QJS-Xc-ats" firstAttribute="top" secondItem="CWV-W6-WSY" secondAttribute="bottom" constant="20" id="JGz-iI-PZ1"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="yyx-QW-Zad" secondAttribute="trailing" constant="45" id="KK2-rO-slA"/>
-                <constraint firstItem="QJS-Xc-ats" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="MzG-Gm-fac"/>
-                <constraint firstItem="CWV-W6-WSY" firstAttribute="top" secondItem="Sd4-Ai-aOU" secondAttribute="bottom" constant="20" id="S8d-bs-FRT"/>
                 <constraint firstItem="NNC-gS-AfA" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="TJY-A3-U2U"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jKO-WZ-3q0" secondAttribute="trailing" constant="45" id="UPQ-3D-Dac"/>
                 <constraint firstItem="NNC-gS-AfA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="45" id="Vm4-aD-gDp"/>
                 <constraint firstItem="Sd4-Ai-aOU" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="X7E-ra-fvL"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="825-kE-A94" secondAttribute="trailing" constant="45" id="YaU-zY-y7A"/>
-                <constraint firstItem="CWV-W6-WSY" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="ZUh-dW-7So"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="jKO-WZ-3q0" secondAttribute="bottom" constant="45" id="bGH-Ag-DMQ"/>
                 <constraint firstItem="Sd4-Ai-aOU" firstAttribute="top" secondItem="jzC-dO-uzR" secondAttribute="bottom" constant="20" id="bSe-VC-CjD"/>
                 <constraint firstItem="CSd-SI-1gk" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="eY2-jW-ZhT"/>
-                <constraint firstItem="jKO-WZ-3q0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="eYe-Ds-nIs"/>
                 <constraint firstItem="h5u-lC-Vtp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="eco-IF-l5M"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="1nH-kD-om9" secondAttribute="bottom" constant="45" id="hVT-3s-URI"/>
                 <constraint firstItem="CSd-SI-1gk" firstAttribute="top" secondItem="825-kE-A94" secondAttribute="bottom" constant="20" id="jz0-H7-Nip"/>
+                <constraint firstItem="1nH-kD-om9" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="rhB-sC-MB8"/>
                 <constraint firstItem="825-kE-A94" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="ui9-kZ-oAa"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="QJS-Xc-ats" secondAttribute="trailing" constant="45" id="ulb-pT-tSi"/>
+                <constraint firstItem="825-kE-A94" firstAttribute="top" secondItem="Sd4-Ai-aOU" secondAttribute="bottom" constant="20" id="v3M-ur-kJO"/>
                 <constraint firstItem="jzC-dO-uzR" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="wXD-hf-Yt6"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Sd4-Ai-aOU" secondAttribute="trailing" constant="45" id="yHB-ps-JAy"/>
             </constraints>
@@ -156,11 +134,6 @@
             <point key="canvasLocation" x="131.8840579710145" y="219.30803571428569"/>
         </view>
     </objects>
-    <designables>
-        <designable name="jKO-WZ-3q0">
-            <size key="intrinsicContentSize" width="75" height="35"/>
-        </designable>
-    </designables>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
