--- a/ItEasy/Recipe/RecipeCard.storyboard
+++ b/ItEasy/Recipe/RecipeCard.storyboard
@@ -65,7 +65,7 @@
                                     </imageView>
                                     <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k8f-YN-UBm">
                                         <rect key="frame" x="264" y="160" width="100" height="30"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="KRd-4k-gZN" customClass="ShadowView" customModule="ItEasy" customModuleProvider="target">
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="KRd-4k-gZN">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
